# aiida-LordCapulet

./: README.md  pyproject.toml  pytest_runner.py  run_tests.py  setup.py
docs/: gather_workchain_data.md  global_constrained_search.md
examples/: NiO.scf.in  NiO_mixing_lTF_beta0.3_oscdft_data.json  example_extract_workchain.py  submit_everything_manual.py  submit_global_search.py  submit_proposal.py
lordcapulet/: __init__.py
lordcapulet/calculations/: __init__.py  constrained_pw.py
lordcapulet/functions/: __init__.py  propose.py
lordcapulet/functions/proposal_modes/: __init__.py  random_mode.py
lordcapulet/utils/: __init__.py  rotation_matrices.py
lordcapulet/utils/postprocessing/: gather_workchain_data.py
lordcapulet/workflows/: __init__.py  afm_scan.py  constrained_scan.py  global_constrained_search.py
lordcapulet_custom_pw/: custom_pw.py
lordcapulet_workflows/: constrained_scan.py  simple_afm_scan.py
tests/: README.md  __init__.py  conftest.py
tests/utils/: test_rotation_matrices.py
